=== master

* Stream result sets in the odbc adapter for better performance and lower memory usage (sparrovv) (#1711)

* Add Postgres::JSONBOp#set_lax and #path_*_tz methods to the pg_json_ops extension for new jsonb functions added in PostgreSQL 13 (jeremyevans)

* Add Dataset#with_ties on PostgreSQL 13+ and Microsoft SQL Server to include rows with same order as final row (jeremyevans)

* Add a :current_schema option to Database#view_exists? (only defined on Oracle) to look in the current schema instead of non-system schemas (jeremyevans) (#1710)

* Recognize another disconnect error in the mysql and mysql2 adapters (jeremyevans) (#1706)

=== 5.35.0 (2020-08-01)

* Recognize another disconnect error in the oracle adapter (sterlzbd) (#1705)

* Consider all associations with :dataset options as instance-specific associations (jeremyevans)

* Make Model.finalize_associations not break with instance-specific associations (jeremyevans)

* Make association placeholder loader consider block if instance_specific: false association option is used (jeremyevans)

* Copy composite unique constraints when emulating alter table operations on SQLite (jeremyevans) (#1704)

* Add instance_specific_default plugin for setting default association :instance_specific value, or warning/raising for cases where it is not specified (jeremyevans)

* Make Model.plugin issue deprecation warning if loading plugin with arguments and block if plugin does not accept arguments/block (jeremyevans)

* Make validation_class_methods consider all :if, :allow_missing, :allow_nil, and :allow_blank settings, instead of just the first (jeremyevans)

* Include hash entries with nil keys in Dataset#to_dot output in to_dot extension (jeremyevans)

* Remove unneeded conditionals from plugins and extensions (jeremyevans)

* Fix exception class in run_transaction_hooks extension if calling run_after_{commit,rollback}_hooks outside of a transaction (jeremyevans)

=== 5.34.0 (2020-07-01)
