@@ -99,6 +99,7 @@ module Sequel
           end
           v.public_send(meth, *args, &block)
         end
+        ruby2_keywords(:method_missing) if respond_to?(:ruby2_keywords, true)
       end
 
       module ClassMethods
